<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpokenPic</string>
    <string name="app_camera">SpokenCamera</string>
    <string name="clip_image">Clip image</string>
    <string name="profile">Profile</string>
    <string name="new_clip">New clip</string>
    <string name="clip_viewer">Viewer</string>
    <string name="clip">Clip</string>
    <string name="timeline_viewer">Timeline</string>
    <string name="share">Share</string>
    <string name="take_photo">Take photo</string>
    <string name="album_name">SpokenPic</string>
    <string name="recordAudio">Record</string>
    <string name="playAudio">Play</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="web_page">Web page</string>
    <string name="saving">Saving</string>
    <string name="saved">Data saved</string>
    <string name="processed">Data processed</string>
    <string name="gallery">Gallery</string>
    <string name="email">EMail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="again">Again</string>
    <string name="register">Register</string>
    <string name="register_another">Create new user</string>
    <string name="user_registered">User registered</string>
    <string name="change_pass">Change password</string>
    <string name="already_registered">I\'m already registered</string>
    <string name="connecting">Connecting to server</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="authentication_error">Authentication error</string>
    <string name="must_authenticate">Must be authenticated</string>
    <string name="downloading_image">Downloading image</string>
    <string name="uploading_clip">Uploading clip</string>
    <string name="clip_uploaded">Clip uploaded</string>
    <string name="connection_error">Connection error</string>
    <string name="camera_error">Error opening camera</string>
    <string name="gallery_error">Error importing from Gallery</string>
    <string name="camera_init_error">Error getting camera information</string>
    <string name="mediarecord_error">Error opening recorder</string>
    <string name="just_posted">I just posted a spoken picture</string>
    <string name="ask_delete">Delete?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="bad_url">Url not recognized</string>
    <string name="recent_clips">Recent clips</string>
    <string name="all_clips">All</string>
    <string name="my_clips">My clips</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="likeit">I like it</string>
    <string name="credits">Credits</string>
    <string name="tos">Terms of use</string>
    <string name="clip_not_found">Clip not found</string>
    <string name="clip_deleted">Clip deleted</string>
    <string name="title">Title</string>
    <string name="a_short_title">A short, descriptive, title</string>
    <string name="rotation_disabled">Rotation detection is disabled, your photographies might appear rotated</string>
    <string name="preferences">Preferences</string>
    <string name="preferences_audio">Audio preferences</string>
    <string name="preferences_image">Uploaded image</string>
    <string name="preferences_audio_quality">Audio quality</string>
    <string name="preferences_default">Default</string>
    <string name="preferences_better">Better</string>
    <string name="preferences_high">High</string>
    <string name="preferences_very_high">Very high</string>
    <string name="preferences_image_quality">Image quality</string>
    <string name="preferences_increase_bandwidth">Higher qualities increase the time required to upload your clips</string>
    <string name="preferences_camera">Camera preferences</string>
    <string name="preferences_camera_full">Panoramic photographies</string>
    <string name="preferences_camera_full_no">Standard camera aspect</string>
    <string name="preferences_camera_full_use">Panoramic enabled, if available. It might use full screen.</string>
    <string name="preferences_use_vorbis">Vorbis encoder</string>
    <string name="preferences_vorbis_yes">Using Vorbis encoder, better quality in general</string>
    <string name="preferences_vorbis_no">Using Android default encoder, quality may vary</string>
    <string name="preferences_high_bright">Increase screen brightness</string>
    <string name="preferences_high_bright_use">The screen brightness will be increased while the camera is active</string>
    <string name="preferences_high_bright_no">The screen brightness won\'t be increased</string>
    <string name="preferences_network">Network preferences</string>
    <string name="preferences_use_background">Upload clips in background</string>
    <string name="preferences_background_yes">Clips will be uploaded in background</string>
    <string name="preferences_background_no">You must wait while a clip is being uploaded</string>
    <string name="preferences_delete_uploaded">Remove uploaded clips</string>
    <string name="preferences_delete_uploaded_yes">Deleted local clips will be also automatically removed from the server</string>
    <string name="preferences_delete_uploaded_no">Deleted clips won\'t be removed from the server. You can still delete them later.</string>
    
    <!-- Image content descriptions -->
    <string name="preview">Preview</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_type">Flash type</string>
    <string name="focus_mode">Focus mode</string>
    <string name="save_clip">Save clip</string>
    <string name="pick_from_gallery">Pick image from Gallery</string>
    <string name="play_stop_audio">Start or stop audio playing</string>
    <string name="record_stop_audio">Start or stop audio recording</string>

</resources>